Add boat departure push notifications
